# nba-asset-lineage

./: .gitignore  AGENTS.md  LICENSE  README.md  mise.toml  pyproject.toml  run_pipeline.py
.agents/: .gitignore  AGENTS.md
.agents/agents/: platform-researcher.md  researcher.md  reviewer.md  tester.md
.agents/references/: review-checklist.md  test-ladder.md  validation-checklist.md  workflow-overview.md
.agents/templates/: plan.yaml  validation-report.yaml
agent-context/: 10-future-vision.md  15-implementation-stage-plan.md  17-stage-01-evidence-layer-spec.md  18-stage-02-canonical-event-spec.md  19-stage-03-player-tenure-spec.md  20-stage-04-pick-lifecycle-spec.md  21-stage-05-event-asset-flow-spec.md  24-stage-08-frontend-vertical-slice-spec.md  26-canonical-identity-and-reference-contract.md  30-final-planning-readiness-review.md  31-stage-02-current-status-handoff.md  README.md  current-redesign-status.md  current-status.md
agent-context/contracts/: provenance-and-build-versioning.md
agent-context/design/: evidence-model.md
agent-context/plans/: stage-roadmap.md
agent-context/product/: decisions.md
agent-context/stages/: 01-evidence-layer.md  04-pick-lifecycle.md  05-event-asset-flow.md  (+3 more)
agents/: developer.md  platform-researcher.md  researcher.md  reviewer.md  tester.md
configs/: bronze_raw_contract.yaml  lineage_scope.yaml  source_catalog.yaml
docs/: bronze_field_source_matrix.md  repo_outline_and_file_purpose.md  silver_field_endpoint_coverage.md
exports/: assets.json  edges.csv  event_asset_lineage.json  events.json  graph.graphml  graph.json  graph_view.html  nodes.csv
frontend/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
overrides/: .gitkeep  README.md
pipelines/: __init__.py
references/: review-checklist.md  validation-checklist.md
schemas/: bronze_raw_contract.yaml  graph_schema.yaml  processed_schema.yaml  raw_manual_schema.yaml
sql/: 0001_bootstrap_bronze_silver.sql  0002_clear_bronze_silver_data.sql  0002_franchise_scope.sql  0003_player_tenure_bootstrap.sql  0004_pick_lifecycle_bootstrap.sql  0005_event_asset_flow_bootstrap.sql  0006_presentation_contract_bootstrap.sql  0007_editorial_overlay_bootstrap.sql
src/: claims_live_ingest.py  files.py  pipeline_cli.py  redesign_cli.py  scope.py  settings.py  silver_transform.py  visualization.py
templates/: implementation-report.yaml  plan.yaml  requirements.yaml  task-handoff.yaml
(+161 files in other folders)
