[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-asset-lineage"
version = "0.1.0"
description = "Deterministic NBA asset lineage pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "psycopg[binary]>=3.2",
]

[project.scripts]
nba-asset-bronze = "pipelines.bronze_ingest.run:main"
nba-asset-silver = "pipelines.silver_transform.run:main"
nba-asset-gold = "pipelines.gold_publish.run:main"
nba-asset-visualize = "pipelines.visualize.run:main"
nba-asset-pipeline = "run_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nba_asset_lineage*"]
