[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-asset-lineage"
version = "0.1.0"
description = "Deterministic NBA asset lineage pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "psycopg[binary]>=3.2",
]

[project.scripts]
nba-asset-bronze = "pipeline_cli:bronze_main"
nba-asset-silver = "pipeline_cli:silver_main"
nba-asset-gold = "pipeline_cli:gold_main"
nba-asset-visualize = "pipeline_cli:visualize_main"
nba-asset-pipeline = "pipeline_cli:pipeline_main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "bronze_ingest",
  "db_config",
  "files",
  "gold_publish",
  "pipeline_cli",
  "scope",
  "settings",
  "silver_transform",
  "visualization",
]
