[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-asset-lineage"
version = "0.1.0"
description = "Deterministic NBA asset lineage pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "psycopg[binary]>=3.2",
  "nba_api>=1.7",
]

[project.scripts]
nba-asset-redesign = "redesign_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["db_config", "redesign_cli"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["canonical*", "editorial*", "evidence*", "presentation*", "shared*"]
namespaces = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
